; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_panels.c___writeValueCb.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_panels.c___writeValueCb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [16 x i8] c"insert number: \00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"\22wv %s\22\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__writeValueCb(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to i32*
  store i32* %6, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i8* @__show_status_input(i32* %7, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  store i8* %8, i8** %4, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %17

11:                                               ; preds = %1
  %12 = load i32*, i32** %3, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @r_core_cmdf(i32* %12, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* %13)
  %15 = load i8*, i8** %4, align 8
  %16 = call i32 @free(i8* %15)
  br label %17

17:                                               ; preds = %11, %1
  ret i32 0
}

declare dso_local i8* @__show_status_input(i32*, i8*) #1

declare dso_local i32 @r_core_cmdf(i32*, i8*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
